# Beak

./: .gitmodules  README.md
backend/: Cargo.toml
frontend/: package.json  pnpm-lock.yaml
